--- a/index.jade
+++ b/index.jade
@@ -3,7 +3,7 @@ extends ../z0rch.github.com/layout
 block variables
     - title = "Numerical Methods"
 
-prepend navigation
+append navigation
     ul.nav
         li
             a(href='#labs', data-bind="click: _.partial(flash.do, '#labs')") Numerical Methods
